tweaked Settings UI

--- a/CallCenterSample/CallCenterSample.csproj
+++ b/CallCenterSample/CallCenterSample.csproj
@@ -162,7 +162,7 @@
       <Version>2.1.0-preview</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.0-Preview1-26502-02</Version>
+      <Version>6.1.7</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Rest.ClientRuntime">
       <Version>2.3.13</Version>
